# cerbotor

./: CMakeLists.txt  Dockerfile  LICENSE  README.org  util.cmake
.github/workflows/: ci.yml
dep/bitwuzla/: bitwuzla_bin.cmake
dep/btor2tools/: btor2parser_lib.cmake  btor2tools.patch
dep/fuzzbtor2/: CMakeLists.txt  fuzzbtor2_bin.cmake
examples/: model.btor2  witness.btor2  witness2.btor  witness2.btor2
scripts/: README.org  certified.in  check.in  check_safe.in  check_unsafe.in  fuzz.in  fuzzer.in  generate.in  random.in  status.in
src/: btor2.cpp  btor2.hpp  cerbotor.cpp  encoding.cpp  encoding.hpp
